--- a/style.scss
+++ b/style.scss
@@ -963,3 +963,245 @@ body {
 }
 
 /* ------------------------- slut Böcker kort  ---------------------------- */
+
+.all {
+  background-color: #fab0a6;
+  width: 1500px;
+  margin-left: 200px;
+  border-left: solid #f9c1b9 4px;
+  border-right: solid #f9c1b9 4px;
+}
+
+.about-us {
+  color: #672727;
+  margin-left: -100px;
+}
+
+.owners {
+  margin-left: -100px;
+  color: #f4f4f8;
+}
+
+.members {
+  color: #f4f4f8;
+  margin-left: 290px;
+  padding-bottom: 20px;
+  margin-top: -40px;
+}
+
+.item-1 {
+  background-color: rgba(255, 255, 255, 0);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 500px;
+  margin-left: 650px;
+  text-align: center;
+  margin-top: 100px;
+
+  a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    margin: 0;
+  }
+}
+
+/* Eivor */
+.card-1 {
+  display: flex;
+  align-items: center;
+  background-color: #af232c;
+  width: 500px;
+  height: 140px;
+  border: 1px solid #af232c;
+  border-radius: 8px;
+  padding: 10px;
+  margin-left: 390px;
+  margin-top: 10px;
+
+  img {
+    width: 150px;
+    height: auto;
+    margin-right: 20px;
+    border-radius: 6px;
+    border-style: solid;
+    border-color: #921c24;
+  }
+
+  .card-1-content {
+    flex-grow: 1;
+
+    h2 {
+      margin: 0 0 10px;
+      font-size: 1.5em;
+      color: #ffffffbc;
+    }
+
+    p {
+      margin: 0;
+      color: #ffffffbc;
+    }
+  }
+}
+
+/* Gunnar */
+.card-2 {
+  display: flex;
+  align-items: center;
+  background-color: #af232c;
+  width: 500px;
+  height: 140px;
+  border: 1px solid #af232c;
+  border-radius: 8px;
+  padding: 10px;
+  margin-left: 920px;
+  margin-top: -139px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+  img {
+    width: 150px;
+    height: auto;
+    margin-right: 20px;
+    border-radius: 6px;
+    border-style: solid;
+    border-color: #921c24;
+  }
+
+  .card-2-content {
+    flex-grow: 1;
+
+    h2 {
+      margin: 0 0 10px;
+      font-size: 1.5em;
+      color: #ffffffbc;
+    }
+
+    p {
+      margin: 0;
+      color: #ffffffbc;
+    }
+  }
+}
+
+.card {
+  h2 {
+    font-size: large;
+  }
+
+  p {
+    font-size: small;
+  }
+}
+
+.member-1 {
+  display: flex;
+  align-items: center;
+  background-color: #af232c;
+  width: 550px;
+  height: 240px;
+  border: 1px solid #af232c;
+  border-radius: 8px;
+  padding: 10px;
+  margin-top: 100px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+  img {
+    width: 150px;
+    height: auto;
+    margin-right: 20px;
+    border-radius: 6px;
+    border-style: solid;
+    border-color: #921c24;
+  }
+
+  .member-1-content {
+    flex-grow: 1;
+
+    h2 {
+      margin: 0 0 10px;
+      font-size: 1.5em;
+      color: #ffffffbc;
+    }
+
+    p {
+      margin: 0;
+      color: #ffffffbc;
+    }
+  }
+}
+
+.member-2 {
+  display: flex;
+  align-items: center;
+  background-color: #af232c;
+  width: 550px;
+  height: 240px;
+  border: 1px solid #af232c;
+  border-radius: 8px;
+  padding: 10px;
+  margin-top: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+  img {
+    width: 150px;
+    height: auto;
+    margin-right: 20px;
+    border-radius: 6px;
+    border-style: solid;
+    border-color: #921c24;
+  }
+
+  .member-2-content {
+    flex-grow: 1;
+
+    h2 {
+      margin: 0 0 10px;
+      font-size: 1.5em;
+      color: #ffffffbc;
+    }
+
+    p {
+      margin: 0;
+      color: #ffffffbc;
+    }
+  }
+}
+
+.member-3 {
+  display: flex;
+  align-items: center;
+  background-color: #af232c;
+  width: 550px;
+  height: 240px;
+  border: 1px solid #af232c;
+  border-radius: 8px;
+  padding: 10px;
+  margin-top: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+  img {
+    width: 150px;
+    height: auto;
+    margin-right: 20px;
+    border-radius: 6px;
+    border-style: solid;
+    border-color: #921c24;
+  }
+
+  .member-3-content {
+    flex-grow: 1;
+
+    h2 {
+      margin: 0 0 10px;
+      font-size: 1.5em;
+      color: #ffffffbc;
+    }
+
+    p {
+      margin: 0;
+      color: #ffffffbc;
+    }
+  }
+}
