--- a/style.css
+++ b/style.css
@@ -582,6 +582,12 @@ ul {
     font-size: 3.1rem;
     padding:0 0 0 5vh;
   }
+  .start-header h2 {
+    color:  var(--rosa);
+    font-size: 1.5rem;
+    font-weight: 500;
+    padding:0 0 0 5vh;
+  }
   .start-header p {
     font-size: 1.3rem;
     padding:0 0 0 1vh;
