--- a/styles.css
+++ b/styles.css
@@ -1297,4 +1297,20 @@ body {
 }
 /* ------------------------- slut Böcker kort  ---------------------------- */
 
+
+/*Om oss sidan laptop 13 tum */
+@media (max-width: 1500px) {
+  .all {
+    width:90vw;
+  }
+  .about-us {
+    margin-left:50vh;
+  }
+  .owners {
+    margin-left:50vh;
+  }
+}
+
+
+
 /*# sourceMappingURL=styles.css.map */
